src/test/deca/context/valid/tests/21_Plus.deca
// Description:
//    Test pour les opérations (plus)
//
// Historique:
//    cree le 16/01/2022

{
    int x = 1;
    x = 1 + x;
}
